Added iframe support

--- a/example.html
+++ b/example.html
@@ -12,10 +12,15 @@
 	Mousetrap.bind('ctrl+space', function() {
 		alert("BOOM!");
 	});
+
 	</script>
 </head>
 <body>
 	<h1>:-)</h1>
 	<textarea name="classTest" id="classTest" cols="30" rows="10"></textarea>
+
+	<br />
+
+	<iframe src="http://localhost:8000/test.html" width="400" height="400"></iframe>
 </body>
 </html>
